--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -80,7 +80,7 @@
             .flex{
                 @media (max-width: 425px) {
                     display: flex;
-                    justify-content: space-around;
+                    justify-content: space-between;
                 }
             }
         }
