--- a/src/unit-details.scss
+++ b/src/unit-details.scss
@@ -227,8 +227,8 @@
                 font-family: "Rubik-bold";
             }
             .desc {
-                color: #ababb6;
-                font-size: 16px;
+                color: black;
+                font-size: 18px;
                 font-family: "Rubik-Regular";
 
                 li{
