--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -12,10 +12,11 @@
         color: #2c2c2c;
         // padding-top: 5%;
 
-        @media (max-width: 425px) {
-            margin-top: -110px;
-            padding-top: 0%;
-        }
+        // @media (max-width: 425px) {
+        //     margin-top: -110px;
+        //     padding-top: 0%;
+        // }
+        
         .sm-bg {
             @media (min-width: 768px) {
                 height: 450px;
