--- a/src/app/shared/components/about-us/about-us.component.scss
+++ b/src/app/shared/components/about-us/about-us.component.scss
@@ -12,10 +12,21 @@ padding: 0;
         .who-we-are {
             padding: 30px;
             margin-bottom: 30px;
+
+            @media (max-width: 425px) {
+                margin-bottom: 0px;
+                padding-bottom: 0px;
+            } 
         }
     }
     .section-row {
         margin-top: 50px;
+
+        @media (max-width: 425px) {
+            margin-top: 35px;
+
+        } 
+
         .out-grid {
             // background-color: #F7F7F7;
             border-top-right-radius: 20px;
