--- a/src/app/shared/components/contact-us/contact-us.component.scss
+++ b/src/app/shared/components/contact-us/contact-us.component.scss
@@ -12,7 +12,16 @@
     
             .get-in-touch {
                 padding: 30px;
-                margin-bottom: 30px;
+                // margin-bottom: 30px;
+
+                p{
+                    color: #A9A9A9;
+                    padding-bottom: 50px;
+
+                    @media (max-width: 425px) {
+                        padding-bottom: 15px;
+                    }
+                }
             }
         }
 
@@ -44,6 +53,15 @@
                 }
                 textarea {
                     border-radius: 10px !important;
+                }
+            }
+
+            button{
+                width: 200px;
+                height: 50px;
+
+                @media (max-width: 425px) {
+                    width: 100%;
                 }
             }
         }
