Buy/Sell Responsive

--- a/src/app/components/buyer/setup-buyer-priorities/setup-buyer-priorities.component.scss
+++ b/src/app/components/buyer/setup-buyer-priorities/setup-buyer-priorities.component.scss
@@ -150,7 +150,7 @@
 
     .button {
         button {
-            width: 45%;
+            width: fit-content;
             height: 50px;
             margin: 40px 10px;
             display: inline;
