--- a/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.scss
+++ b/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.scss
@@ -304,7 +304,7 @@
         .holder {
             background-color: #fff;
             border-radius: 20px;
-            padding-bottom: 40px;
+            padding-bottom: 30px;
             p {
                 color: #2C2C2C;
                 font-size: 16px;
@@ -356,6 +356,10 @@
         // padding: 15px;
     }
     .priorites-control {
+        @media (max-width: 425px) {
+            display: none !important;
+        }
+
         display: flex !important;
         flex-direction: column !important;
         background: #fff;
