--- a/src/app/shared/components/results/results.component.scss
+++ b/src/app/shared/components/results/results.component.scss
@@ -3,6 +3,10 @@
     .main-row {
         margin-top: 50px;
 
+        @media (max-width: 425px) {
+            margin-top: 20px;
+        }
+
         .result-head {
             p.float-start{
                 font-family:'Rubik-bold';
