--- a/src/app/components/buyer/setup-buyer-priorities/setup-buyer-priorities.component.html
+++ b/src/app/components/buyer/setup-buyer-priorities/setup-buyer-priorities.component.html
@@ -20,7 +20,7 @@
             <div class="col holder mt-3">
               <div class="row justify-content-center">
                 <div class="row head-section">
-                  <p class="title-head col-6 float-start">{{'setupBuyerPriorities.Go to your Home' | translate}}</p>
+                  <p class="title-head float-start">{{'setupBuyerPriorities.Go to your Home' | translate}}</p>
                   <!-- <p class="title-head col-6">
                     <span (click)="showMatchingGraph(content)" class="float-end matchingGraph">Show Matching Graph</span>
                   </p> -->
