--- a/src/app/shared/components/set-priorites/set-priorites.component.scss
+++ b/src/app/shared/components/set-priorites/set-priorites.component.scss
@@ -29,10 +29,19 @@
 .main-content {
     margin-top: -175px;
     padding-bottom: 35px;
+
+    @media (max-width: 425px) {
+        padding-bottom: 0px;
+    }
+    
     .priorites-list {
         .custom-element {
             @media (min-width: 1024px) {
                 width: 12%;
+            }
+            @media (max-width: 425px) {
+                width: 33%;
+                padding: 5px;
             }
             @media only screen and (min-width: 768px) and (max-width: 1024px) {
                 width: 20.87%;
@@ -51,6 +60,11 @@
             p {
                 color: #2c2c2c;
                 font-size: 15px;
+
+                @media (max-width: 425px) {
+                    font-size: 13px;
+                }
+
             }
             .priority-header{
                 font-size: 18px;
@@ -107,13 +121,19 @@
                 cursor: pointer;
                 @media (max-width: 425px) {
                     max-width: 114px;
-                    height: 95px;
+                    // height: 95px;
                 }
 
                 .toggle{
                     width: 22px;
                     height: 22px;
-                    margin: 10px 10px 0px 10px
+                    margin: 10px 10px 0px 10px;
+
+                    @media (max-width: 425px) {
+                        width: 18px;
+                        height: 18px;
+                        margin: 6px 6px 0;
+                    }
                 }
 
                 .icon {
@@ -145,7 +165,7 @@
                         //    display: block;
                     }
                     @media (max-width: 425px) {
-                        font-size: 14px;
+                        font-size: 12px;
                     }
                 }
 
@@ -153,6 +173,10 @@
                     display: flex;
                     justify-content: flex-end;
                     margin-bottom: -5px;
+
+                    @media (max-width: 425px) {
+                        margin-bottom: 0px;
+                    }
                     fa-icon {
                         color: #cecece;
                     }
@@ -171,13 +195,19 @@
 
 				@media (max-width: 425px) {
                     max-width: 114px;
-                    height: 95px;
+                    // height: 95px;
                 }
 
                 .toggle{
                     width: 22px;
                     height: 22px;
-                    margin: 10px 10px 0px 10px
+                    margin: 10px 10px 0px 10px;
+
+                    @media (max-width: 425px) {
+                        width: 18px;
+                        height: 18px;
+                        margin: 6px 6px 0;
+                    }
                 }
 
 	
@@ -210,7 +240,7 @@
                         //    display: block;
                     }
                     @media (max-width: 425px) {
-                        font-size: 14px;
+                        font-size: 12px;
                     }
                 }
 
@@ -218,6 +248,10 @@
                     display: flex;
                     justify-content: flex-end;
                     margin-bottom: -5px;
+
+                    @media (max-width: 425px) {
+                        margin-bottom: 0px;
+                    }
                     // margin: 0px 5px 0px 5px;
                     fa-icon {
                         // font-size: 12px;
@@ -239,7 +273,7 @@
                 padding: 0px 5px;
 
 				@media (max-width: 425px) {
-                    max-width: 114px;
+                    // max-width: 114px;
                 }
 
                 .icon {
@@ -292,9 +326,14 @@
         .margin_all{
             margin: 0% 4%;
             display: flex;
+            flex-wrap: wrap;
+
+            @media (max-width: 425px) {
+                margin: 0% 1%;
+            }
 
             .margin_item{
-                margin: 0% 1%;
+                margin: 1%;
             }
 
         }
@@ -378,5 +417,13 @@
                 font-size: 11px;
             }
         }
+    }
+
+    .responsive{
+            width: 25%;
+
+            @media (max-width: 425px) {
+                width: 100%;
+            }
     }
 }
