--- a/src/styles.scss
+++ b/src/styles.scss
@@ -623,6 +623,10 @@ nz-progress {
     }
 }
 
+.upload-photos{
+    min-height: 550px;
+}
+
 .sub-head {
     width: 100%;
     height: 315px;
@@ -1205,6 +1209,10 @@ span.dropdown-multiselect--active{
     @media (max-width:425px) {
         border: 1px solid #d9d3d3;
         border-radius: 10px;    
+
+        span.ng-star-inserted{
+            // width: 100%;
+        }
     }
 }
 
