--- a/src/app/shared/components/my-units/my-units.component.html
+++ b/src/app/shared/components/my-units/my-units.component.html
@@ -193,7 +193,7 @@
                                                 </div>
                                                 <div class="row">
                                                     <button class="btn button-success applyBtn float-end firstbtn"
-                                                    (click)="editUnit()"
+                                                    (click)="editUnit(item)"
                                                     >
                                                         {{'button.actions.Apply & Continue' | translate}}
                                                     </button>
